# FastAPIOpenAITourists

./: .env-example  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: alembic.ini  app_factory.py  settings.py
backend/app/ai_service/: ai_models.py  bl.py
backend/app/apps/common_resourses/: schemas.py
backend/app/apps/tourism/: crud.py  models.py  prompts.py  router.py  schemas.py
backend/app/database/: base.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 2025_07_05_0756-35043e9f96d1_add_database.py  2025_07_05_1002-e7519ea7afdb_add_storage.py
nginx/: nginx.conf
